# napari-manual-stack-project

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
napari_manual_stack_project/: __init__.py  _dock_widget.py
napari_manual_stack_project/_tests/: test_dock_widget.py
