[metadata]
name = napari-manual-stack-project
version = 0.0.1
author = John Fozard
author_email = john.fozard@gmail.com
license = BSD-3-Clause
url = https://github.com/jfozard/napari-manual-stack-project
description = Manual projection of 3D stacks to 2D using points placed on stack
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jfozard/napari-manual-stack-project/issues
    Documentation = https://github.com/jfozard/napari-manual-stack-project#README.md
    Source Code = https://github.com/jfozard/napari-manual-stack-project
    User Support = https://github.com/jfozard/napari-manual-stack-project/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-manual-stack-project = napari_manual_stack_project
